@@ -15,6 +15,8 @@
     on AIX 5.2 ML1, AIX 5.3 ML5 (thx Daniel Clark).
   * sv.c: fix race on check for down if pid is 0 and state is run or finish.
   * runit.c: speed up collecting zombies.
+  * runit.c: force check for zombies after a 14 second timeout without
+    signals (CHLD, CONT, INT).
 
 1.7.2
 Tue, 21 Nov 2006 15:13:47 +0000
